--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nature-space",
+  "name": "yoga-health-wellness-center",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://diwakarsingh95.github.io/nature-space/",
+  "homepage": "https://yogahealthwellnesscenter.com",
   "dependencies": {
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
