--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "Nature Space",
-  "name": "Nature Space Yoga Studio",
+  "short_name": "YHWC",
+  "name": "Yoga Health & Wellness Center",
+  "description": "Visit Yoga Health & Wellness Center for Yoga Therapy, Accupressure, Naturopathy and Aerobics etc.",
   "icons": [
     {
       "src": "favicon.ico",
