--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,7 +41,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm ci
-      - run: npm test --passWithNoTests
+      - run: npm test -- --passWithNoTests
       - run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
